Nav overflow fix on mobile pt 2

--- a/blocks/src/blocks/nav-container/style.scss
+++ b/blocks/src/blocks/nav-container/style.scss
@@ -153,13 +153,13 @@
             box-shadow: none;
             border: none;
             background: rgba(0, 0, 0, 0.02);
-            height: auto;
-            max-height: none;
-            overflow: visible;
+            // height: auto;
+            // max-height: none;
+            // overflow: visible;
             .flyout-content {
-                height: auto;
-                max-height: none;
-                overflow: visible;
+                // height: auto;
+                // max-height: none;
+                // overflow: visible;
             }
         }
     }
